# kwrepr

./: LICENSE  README.md  kwrepr.py  pyproject.toml
kwrepr/: __init__.py  decorator.py  kwrepr.py  types.py
kwrepr/field_extractors/: __init__.py  base_field_extractor.py  dict_field_extractor.py  included_field_extractor.py  slots_field_extractor.py
